2006-05-25 yonekawa,nowel(S2Dao.PHP5-1.1.0-RC4)

    * add: S2Pager S2Dao_LimitOffsetInterceptorを追加しました。
	- MySQL,PostgresSQLであれば、データの取得にLimit,Offset句を使うことができます。
	- 使用する場合はdao-pager.diconの設定を書き換えます。
	  
	  ex)
	  <!-- S2Dao_PagerS2DaoInterceptorWrapperをコメントアウト
	  <component name="interceptor" class="S2Dao_PagerS2DaoInterceptorWrapper">
	    <arg>
	      <component class="S2DaoInterceptor" />
	    </arg>
	  </component>
	  -->
	  <component name="inteceptor class="S2Dao_LimitOffsetS2DaoInterceptor"/>
	
    * add: PhingTask S2DaoTestGenTaskを追加しました。
        - 現在はPHPUnit2のテストコードをPHPUnit2のSkeletonから自動生成します。
        - /test と同様のテストコードを自動生成します。

2006-05-23 nowel(S2Dao.PHP5-1.1.0-RC4)

    * fix: コメントアノテーション時にN:1マッピングの取得がドキュメントと違っていたのを修正しました。
    * fix: コメントアノテーション時にNoPersistentPropertyが正しく取得されないのを修正しました。
    * add: TimestampProperty, VersionNoProperty アノテーションを追加しました。
        ex)
        /**
         * @TimestampProperty(aa)
         * @VersionNoProperty(bb)
         */
        class FooBean {
            private $aa;
            private $bb;
                :
                :
        }

2006-05-22 nowel(S2Dao.PHP5-1.1.0-RC4)

    * S2DaoTestCaseをS2Container_S2PHPUnit2TestCaseから継承するように変更しました。

2006-05-21 yonekawa, nowel(S2Dao.PHP5-1.1.0-RC4)

    * S2Pagerを追加しました
        - add: /src/s2dao.php5/org/seasar/dao/pager/S2Dao_PagerS2DaoInterceptorWrapper.class.php
        - add: /src/s2dao.php5/org/seasar/dao/pager/S2Dao_PagerResultSetWrapper.class.php
        - add: /src/s2dao.php5/org/seasar/dao/pager/S2Dao_PagerSupport.class.php
        - add: /src/s2dao.php5/org/seasar/dao/pager/S2Dao_PagerViewHelper.class.php
        - add: /src/s2dao.php5/org/seasar/dao/pager/S2Dao_PagerCondition.class.php
        - add: /src/s2dao.php5/org/seasar/dao/pager/S2Dao_DefaultPagerCondition.class.php
        - add: /src/s2dao.php5/dao-pager.dicon
    * add: example/s2dao_pagerを追加しました
    * add: S2Dao_SelectDynamicCommand::getResultSetFactory()を追加しました。

2006-05-19 nowel(S2Dao.PHP5-1.1.0-RC4)
