@@ -63,7 +63,7 @@ class S2Dao_ArrayList extends ArrayObject {
     }
     
     public function addAll(ArrayObject $list){
-        foreach($list->toArray() as $value){
+        foreach($list->getArrayCopy() as $value){
             $this->append($value);
         }
     }
