@@ -39,9 +39,8 @@ class S2Dao_HashMap {
     public function get($object){
         if(isset($this->element[$object])){
             return $this->element[$object];
-        } else {
-            return null;
         }
+        return null;
     }
     
     public function put($key, $value){
